<resources>
    <string name="app_name">Skjutsgruppen</string>
    <string name="skjuts_bg_text">Skjutsgruppen</string>
    <string name="skjuts_search">SÖK</string>
    <string name="skjuts_where_to">Jag ber om skjuts från</string>
    <string name="skjuts_from">till</string>
    <string name="ride_list_item_dateTextView">datum</string>
    <string name="ride_list_item_personTextView">person</string>
    <string name="journeyType">typ av skjuts</string>
    <string name="skjuts_menu_section1">Sök skjuts</string>
    <string name="skjuts_menu_section2">Om Skjutsgruppen</string>
    <string name="om_skjutsgruppen"><b>Du är Skjutsgruppen. Vi är Skjutsgruppen. Tillsammans.</b>\n\nVi är en ideell samåkningsrörelse\n\nVi är en grupp som utgörs av många privatpersoner. Individerna är viktiga, gruppen är viktig. Vi gör inte det här för vinstintressen. Vi är en miljörörelse. Vi definierar samåkning som “alla former av gemensamt miljövänligt resande”, det kan vara buss, tåg, luftballong eller bil etc. Vi är en rörelse, vilket både är en lek med ord, vi rör oss framåt, och ett ideologiskt förhållningssätt. Alla i gruppen är lika viktiga.\n\nLäs mer på\nhttp://skjutsgruppen.nu/about_us</string>
</resources>