<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <ImageView
        android:id="@+id/journeyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/journeyType"
        android:padding="4dp" />

    <TextView
        android:id="@+id/ride_list_item_dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="10dp"
        android:text="@string/ride_list_item_dateTextView"
        android:textStyle="bold"
        android:textSize="@dimen/listText" />

    <TextView
        android:id="@+id/ride_list_item_personTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ride_list_item_dateTextView"
        android:paddingTop="3dp"
        android:paddingRight="5dp"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:text="@string/ride_list_item_personTextView"
        android:textSize="@dimen/listText" />
    


</RelativeLayout>
